--- a/test/test.html
+++ b/test/test.html
@@ -4,72 +4,47 @@
     <meta charset="UTF-8">
     <title>test</title>
     <style>
-        /* 1. flex 溢出项布局 */
-        body{
-            margin:0;
-        }
-        .main{
-            height:100px;
+        /* 1. grid 行自适应布局 */
+        /* .main{ 
+            width:300px;
             background:skyblue;
-            display: flex;
-            align-items: center;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-rows: 100px;
+            gap:5px;
         }
         .main div{
-            width:100px;
-            height:80px;
             background:pink;
-            margin-right:10px;
-            flex-shrink: 0;
-        }
-        /* 2. float 溢出项布局 */
-        /* body{
-            margin:0;
-        }
-        .main{
-            height:100px;
-            background:skyblue;
-        }
-        .main section{
-            width:2000px;
-        }
-        .main div{
-            width:100px;
-            height:80px;
-            background:pink;
-            margin-right:10px;
-            float:left;
         } */
+        /* 2. grid 列自适应布局 */
+        .main{ 
+            height:300px;
+            background:skyblue;
+            display: inline-grid;
+            grid-template-rows: repeat(3, 1fr);
+            grid-auto-flow: column;
+            grid-auto-columns: 100px;
+            gap:5px;
+        }
+        .main div{
+            background:pink;
+        }
     </style>
 </head>
 
 <body>
-    <!-- 1 -->
     <div class="main">
         <div>1</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
         <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
     </div>
-    <!-- 2 -->
-    <!-- <div class="main">
-        <section>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
-        </section>
-    </div> -->
 </body>
 
 </html>
